# slippy

./: LICENSE  README.md  pyproject.toml
slippy/: codes.py  diagnostic.py  lint.py  main.py  utils.py
snakefiles/: test.smk
tests/: conftest.py  test_lint.py  test_utils.py
tests/snakefiles/: test.smk
